# Web3bridge-Rust-Masterclass-Cohort-I

./: .gitignore
live-session/week-1/Day-4-live/csv_grouping/: Cargo.toml  grouped_student.csv  students.csv
live-session/week-2/day-2-live/school_management/: Cargo.toml
live-session/week-2/day-4-live-session/libray_stucture/: Cargo.toml
live-session/week-2/school_management/src/: main.rs
live-session/week-4/: Readme.md
live-session/week-5/: Readme.md
submissions/week-1/day-2/Adepoju_Ayomide/: Cargo.toml
submissions/week-2/group-projects/group-30/employee_contact_manager/: Cargo.toml
submissions/week-2/group-projects/group-30/employee_contact_manager/src/: employee.rs  error.rs  lib.rs  main.rs  manager.rs  ui.rs
submissions/week-2/group-projects/group-30/employee_contact_manager/tests/: integration_test.rs
submissions/week-4/: Akande-Gbolahan.md  Emmanuel-Paul.md  Idolor-Godswill.md  ofuzor-chukwuemeke.md  oghenerukevwe-sandra-idjighere
submissions/week-4/Alfred-Olumide-Adenigba/: Stylus-Js.md  Stylus-zig.md
submissions/week-4/Ayooluwa-Oyewo/: Stylus-Js.md  Stylus-zig.md
submissions/week-4/Gbolahan-Akande/: Akande-Gbolahan.md
submissions/week-5/: Alfred-Olumide-Adenigba.md  Emmanuel-Paul.md  Gbolahan-Akande.md  ofuzor-chukwuemeke.md
tasks/week-1/: Day-4-task.md  Day-5-task-1 & 2.md
tasks/week-2/: Day-3-task.md  Group-Project-1-24.markdown
tasks/week-4/: Task-node.md  Task-stylus-js.md  Task-stylus-zig.md
tasks/week-5/: Task-convert-project.md  Tasks-ERC-20.md  Tasks-ERC-6909.md  Tasks-ReentrancyGuard.md  Tasks-String.md
(+381 files in other folders)
